styles/main.css
html * {
    font-family: roboto, Verdana, Geneva, Tahoma, sans-serif;
    -webkit-transition: all 0.3s 0.2s ease-in-out;
    transition: all 0.3s 0.2s ease-in-out;
}

body {
    margin: 0;
}

#chart {
    -webkit-transition: font-size 0s 0s ease-in-out;
    transition: font-size 0s 0s ease-in-out;
    min-height: 100vh;
    width: 100vw;
    border-collapse: collapse;
    table-layout: fixed;
}

th, td {
    text-align: center;
    background-color: whitesmoke;
}

h1 {
    margin: 0;
}

